BE-FE-004 rotas para dar suporte a pagina de validacao de pontos